# ChangeLog for app-backup/cyphertite
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/cyphertite/ChangeLog,v 1.6 2014/09/21 20:04:40 grknight Exp $

*cyphertite-2.0.2-r4 (21 Sep 2014)

  21 Sep 2014; Brian Evans <grknight@gentoo.org> +cyphertite-2.0.2-r4.ebuild,
  -cyphertite-2.0.2-r3.ebuild:
  Revision bump to fix man page installations when PORTAGE_COMPRESS is not
  bzip2. Thanks to jlec for pointing this out

*cyphertite-2.0.2-r3 (19 Jul 2014)

  19 Jul 2014; Brian Evans <grknight@gentoo.org> +cyphertite-2.0.2-r3.ebuild,
  -cyphertite-2.0.2-r2.ebuild, files/cyphertite-2.0.2-fix-build.patch:
  Fix build system which wrongly filtered using s/-lssl//g to use s/-lssl //g .
  This breaks curl linked with non-OpenSSL such as nss and is bad  practice
  anyway

  09 Jul 2014; Brian Evans <grknight@gentoo.org>
  files/cyphertite-2.0.2-cflags.patch:
  Fix LDFLAGS ordering on internal modules. No revbump as the installed binary
  uses the static versions

*cyphertite-2.0.2-r2 (06 Jul 2014)

  06 Jul 2014; Brian Evans <grknight@gentoo.org> +cyphertite-2.0.2-r2.ebuild,
  +files/cyphertite-2.0.2-cflags.patch, -cyphertite-2.0.2-r1.ebuild:
  Fix quoting and CFLAGS with patch from bug 516500 thanks to hasufell.

*cyphertite-2.0.2-r1 (06 Jul 2014)

  06 Jul 2014; Brian Evans <grknight@gentoo.org> +cyphertite-2.0.2-r1.ebuild,
  -cyphertite-2.0.2.ebuild, files/cyphertite-2.0.2-fix-build.patch:
  Revision bump to fix CFLAGS and deps as per bug 516498 and bug 516500

*cyphertite-2.0.2 (26 Jun 2014)

  26 Jun 2014; Brian Evans <grknight@gentoo.org> +cyphertite-2.0.2.ebuild,
  +files/cyphertite-2.0.2-fix-build.patch, +metadata.xml:
  Initial commit